### Summary of Most Important Changes: The project underwent significant restructuring and cleanup. The README.md file was enhanced with detailed documentation, while several obsolete components related to weather forecasting were removed. The solution was updated to include new project references and organizational changes to support a more modular architecture.
### List of Changes

1. **README.md Update**:
   - Added a new section on prerequisites.
   - Included a detailed explanation of the project structure, covering the Blazor UI, File Management Microservice, Processing Microservice, Notification Microservice, and Event-Driven Communication using Azure Event Grid.
   - **Reference**: `README.md`

2. **Removal of Weather Forecasting Components**:
   - **WeatherForecast.cs**: Removed the class for weather forecasting data.
     - **Reference**: `WeatherForecast.cs`
   - **WeatherForecastService.cs**: Removed the service class for generating weather forecast data.
     - **Reference**: `WeatherForecastService.cs`
   - **Counter.razor**: Removed the simple counter component.
     - **Reference**: `Counter.razor`
   - **FetchData.razor**: Removed the component for fetching and displaying weather forecast data.
     - **Reference**: `FetchData.razor`
   - **SurveyPrompt.razor**: Removed the component for displaying a survey prompt.
     - **Reference**: `SurveyPrompt.razor`

3. **Modification of Existing Components**:
   - **Index.razor**: Modified to remove the SurveyPrompt component.
     - **Reference**: `Index.razor`
   - **Program.cs**: Modified to remove the registration of the WeatherForecastService and added a commented-out line for registering the VPKFileProcessorService.
     - **Reference**: `Program.cs`

4. **Project and Solution Updates**:
   - **VPKFILEPROCESSORAPP.BLAZORSERVERAPP.csproj**: Updated to include project references to the File Management Service, Notification Service, and Processing Service projects.
     - **Reference**: `VPKFILEPROCESSOR

--- a/VPKFILEPROCESSORAPP.BLAZORSERVERAPP/VPKFILEPROCESSORAPP.BLAZORSERVERAPP.csproj
+++ b/VPKFILEPROCESSORAPP.BLAZORSERVERAPP/VPKFILEPROCESSORAPP.BLAZORSERVERAPP.csproj
@@ -14,6 +14,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VPKFILEPROCESSOR.SHARED\VPKFILEPROCESSOR.SHARED.csproj" />
+    <ProjectReference Include="..\VPKFILEPROCESSORAPP.FILEMANAGEMENTSERVICE\VPKFILEPROCESSORAPP.FILEMANAGEMENTSERVICE.csproj" />
+    <ProjectReference Include="..\VPKFILEPROCESSORAPP.NOTIFICATIONSERVICE\VPKFILEPROCESSORAPP.NOTIFICATIONSERVICE.csproj" />
+    <ProjectReference Include="..\VPKFILEPROCESSORAPP.PROCESSINGSERVICE\VPKFILEPROCESSORAPP.PROCESSINGSERVICE.csproj" />
   </ItemGroup>
 
 </Project>
