--- a/VPKFILEPROCESSORAPP.PROCESSINGSERVICE/VPKFILEPROCESSORAPP.PROCESSINGSERVICE.csproj
+++ b/VPKFILEPROCESSORAPP.PROCESSINGSERVICE/VPKFILEPROCESSORAPP.PROCESSINGSERVICE.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VPKFILEPROCESSOR.SHARED\VPKFILEPROCESSOR.SHARED.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
