### Summary of Most Important Changes: 1. **Introduction of File Upload Functionality**: A new `FileUploadController` was added to handle file uploads. 2. **Removal of Weather Forecast Functionality**: The `WeatherForecastController` and its dependencies were removed. 3. **Integration with Azure Blob Storage**: The project now includes services for interacting with Azure Blob Storage, including uploading, downloading, deleting, and checking the existence of files. 4. **Dependency Injection Configuration**: The `Program.cs` file was updated to register the necessary services for Azure Blob Storage. 5. **Logging and Configuration**: Serilog was configured for logging, and settings for Azure Storage Account were added to `appsettings.json`.
### List of Changes:
1. **FileUploadController.cs**:
   - Added a new controller `FileUploadController` with an `Index` action that returns a simple message.
   - **Reference**: `FileUploadController.cs`

2. **WeatherForecastController.cs**:
   - Removed the `WeatherForecastController` and its associated methods and dependencies.
   - **Reference**: `WeatherForecastController.cs`

3. **Program.cs**:
   - Added using directives for `Azure.Storage.Blobs` and `VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.Services`.
   - Registered `BlobServiceClient` as a singleton service in the dependency injection (DI) container.
   - Registered `IDataStorageService` with its implementation `AzureBlobStorageService` as a scoped service.
   - **Reference**: `Program.cs`

4. **AzureBlobStorageService.cs**:
   - Added a new service `AzureBlobStorageService` implementing `IDataStorageService`.
   - Implemented methods for uploading, downloading, deleting, and checking the existence of files in Azure Blob Storage.
   - Included logging and exception handling in each method.
   - **Reference**: `AzureBlobStorageService.cs`

5. **IDataStorageService.cs**:
   - Added a new interface `IDataStorageService` defining methods for file operations in Azure Blob Storage.

--- a/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/appsettings.json
+++ b/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/appsettings.json
@@ -1,9 +1,27 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "VPK File Processor"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AzureStorageAccountSetting": {
+    "AZStorageConnectionString": "your-azure-storage-connection-string",
+    "ContainerName": "your-container-name"
   },
   "AllowedHosts": "*"
 }
