--- a/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj
+++ b/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.22.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
@@ -19,7 +20,6 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
