### Summary of Most Important Changes: The codebase has undergone several significant updates, primarily focusing on namespace management, service registration, and package updates. Key changes include the removal of unused namespaces, the addition of new namespaces, the initialization of the `WebApplication` builder, and the registration of Azure services. Additionally, package references have been updated to newer versions, and test initialization has been modified for better handling of null configuration values.
### List of Changes

1. **`Program.cs` File Updates:**
   - Removed unused `Azure.Identity` and `Microsoft.Extensions.Configuration` namespaces. [Reference: `Program.cs`]
   - Added a new namespace `VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.Utils`. [Reference: `Program.cs`]
   - Initialized the `WebApplication` builder. [Reference: `Program.cs`]
   - Registered `AzureBlobStorageService` as a scoped service. [Reference: `Program.cs`]
   - Added `BlobServiceClient` and `QueueServiceClient` to the `AzureClientFactoryBuilder` using the `AddAzureClients` method. [Reference: `Program.cs`]

2. **`AzureClientFactoryBuilderExtensions.cs` File Updates:**
   - Moved the class into the `VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.Utils` namespace. [Reference: `AzureClientFactoryBuilderExtensions.cs`]
   - Added XML documentation comments to the methods. [Reference: `AzureClientFactoryBuilderExtensions.cs`]
   - Refactored the `AddBlobServiceClient` and `AddQueueServiceClient` methods to include inline documentation and improve readability. [Reference: `AzureClientFactoryBuilderExtensions.cs`]

3. **`VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj` File Updates:**
   - Changed the `UserSecretsId`. [Reference: `VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj`]
   - Updated package references:
     - Removed `Microsoft.VisualStudio.Azure.Containers.Tools.Targets` version `1.19.6`. [Reference: `VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj`]
     - Removed `Swashbuckle.AspNetCore` 

--- a/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj
+++ b/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj
@@ -4,14 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>f80b5312-049d-4ac9-a0e7-dd776514cac4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>5ebef9ed-dfa6-4274-8385-3965f851df15</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.22.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Azure.Storage.Files.Shares" Version="12.20.0" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.20.0" />
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
