--- a/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj
+++ b/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE/VPKFILEPROCESSOR.FILEMANAGEMENTSERVICE.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.26.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.22.1" />
     <PackageReference Include="Azure.Storage.Files.Shares" Version="12.20.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.20.0" />
@@ -19,10 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VPKFILEPROCESSOR.SHARED\VPKFILEPROCESSOR.SHARED.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
