--- a/VPKFILEPROCESSOR.PROCESSINGSERVICE/VPKFILEPROCESSOR.PROCESSINGSERVICE.csproj
+++ b/VPKFILEPROCESSOR.PROCESSINGSERVICE/VPKFILEPROCESSOR.PROCESSINGSERVICE.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
