### Summary of Most Important Changes: The primary changes involve renaming the project from `VPKFILEPROCESSOR.AZUREFUNCTION` to `VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR` across multiple files and configurations. Additionally, there are updates to deployment configurations, removal of unused dependencies, and simplification of the `Program.cs` file.

--- a/.github/workflows/FUNTIONPROCESSORFILE-DEV-LINUX.yml
+++ b/.github/workflows/FUNTIONPROCESSORFILE-DEV-LINUX.yml
@@ -5,11 +5,11 @@ on:
     - feature/file-processing-service
 env:
   AZURE_FUNCTIONAPP_NAME: FUNTIONPROCESSORFILE-DEV-LINUX
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: VPKFILEPROCESSOR.AZUREFUNCTION/published
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR/published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
-  WORKING_DIRECTORY: VPKFILEPROCESSOR.AZUREFUNCTION
-  DOTNET_CORE_VERSION_INPROC: 8.0.x
+  WORKING_DIRECTORY: VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR
+  DOTNET_CORE_VERSION_INPROC: 6.0.x
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -47,5 +47,5 @@ jobs:
       uses: Azure/functions-action@v1
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        publish-profile: ${{ secrets.FUNTIONPROCESSORFILE_DEV_LINUX_8A68 }}
+        publish-profile: ${{ secrets.FUNTIONPROCESSORFILE_DEV_LINUX_0486 }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
