--- a/VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR/Dockerfile
+++ b/VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR/Dockerfile
@@ -7,15 +7,15 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["VPKFILEPROCESSOR.AZUREFUNCTION/VPKFILEPROCESSOR.FILEPROCESSINGSERVICE.csproj", "VPKFILEPROCESSOR.AZUREFUNCTION/"]
-RUN dotnet restore "./VPKFILEPROCESSOR.AZUREFUNCTION/VPKFILEPROCESSOR.FILEPROCESSINGSERVICE.csproj"
+COPY ["VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR/VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR.csproj", "VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR/"]
+RUN dotnet restore "./VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR/VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR.csproj"
 COPY . .
-WORKDIR "/src/VPKFILEPROCESSOR.AZUREFUNCTION"
-RUN dotnet build "./VPKFILEPROCESSOR.FILEPROCESSINGSERVICE.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR"
+RUN dotnet build "./VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./VPKFILEPROCESSOR.FILEPROCESSINGSERVICE.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./VPKFILEPROCESSOR.AZFUNCFILEPROCESSOR.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /home/site/wwwroot
