### Summary of Most Important Changes: AZFUNCBLOBTRIGGERNOTIFICATION` has undergone significant updates to enhance email notification functionality and resource deployment. Key changes include the introduction of new package references, the replacement of the `IEmailService` with `IEmailNotificationService`, and the implementation of `SendGridEmailNotificationService` for sending emails. Additionally, ARM templates have been added for deploying Application Insights and Storage Account resources.
### List of Changes

1. **Added New Package References**: Included references for `Azure.Storage.Blobs`, `SendGrid`, `System.Net.Http`, and `System.Text.RegularExpressions` in `AZFUNCBLOBTRIGGERNOTIFICATION.csproj`.
   *Reference: `AZFUNCBLOBTRIGGERNOTIFICATION.csproj`*

2. **Removed Services Folder Reference**: The `Services` folder reference was removed from `AZFUNCBLOBTRIGGERNOTIFICATION.csproj`.
   *Reference: `AZFUNCBLOBTRIGGERNOTIFICATION.csproj`*

3. **Updated BlobStorageTrigger.cs**: Modified to use `IEmailNotificationService` instead of `IEmailService`, with corresponding changes to the constructor and method calls.
   *Reference: `BlobStorageTrigger.cs`*

4. **Changed BlobTrigger Attribute**: The `BlobTrigger` attribute in `BlobStorageTrigger.cs` was updated to remove `Source = BlobTriggerSource.EventGrid`.
   *Reference: `BlobStorageTrigger.cs`*

5. **Removed IEmailService Interface**: The `IEmailService` interface and its implementation were removed.
   *Reference: General codebase*

6. **Added SendGridEmailNotificationService**: Implemented `SendGridEmailNotificationService` and registered it in the DI container in `Program.cs`.
   *Reference: `Program.cs`*

7. **Added ARM Templates**: Created `appInsights1.arm.json` and `storage1.arm.json` for deploying Application Insights and Storage Account resources.
   *Reference: `appInsights1.arm.json`, `storage1.arm.json`*

8. **Updated Service Dependencies**: Modified `serviceDependencies.AZFUNCBLOBTRIGGERNOTIFICATION 

--- a/AZUREFUNCNOTIFICATION/AZFUNCBLOBTRIGGERNOTIFICATION.csproj
+++ b/AZUREFUNCNOTIFICATION/AZFUNCBLOBTRIGGERNOTIFICATION.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.23.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.4.0" />
@@ -18,6 +19,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.18.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
   <ItemGroup>
@@ -31,8 +35,5 @@
   </ItemGroup>
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
